# asteroids

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
src/: Main.cpp  Object.cpp  Object.h  SpaceConvert.cpp  SpaceConvert.h  Vector2.h  main.cpp
src/Core/: Game.cpp  Game.h  Object.cpp  Object.h
src/Core/Math/: SpaceConvert.cpp  SpaceConvert.h  Vector2.h
